Updated Website (media quaries)

--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aero Home™ Company - Landing Page</title>
-  <meta name="description"
-    content="Aero Home Company provides professional home services, outdoors and indoors in Lethbridge. Get a free estimate today!">
-  <meta name="keywords"
-    content="landscaping, renovations, drywall, painting, Lethbridge, handyman, Calgary, garden, cleanup">
 
-  <link rel="stylesheet" href="index-style.css" />
-  <link rel="icon" type="image/x-icon" href="images/AeroLogo.ico" />
+  <title>Landscaping & Home Renovations in Lethbridge, Alberta - Aero Home™ Company</title>
+
+  <meta name="description"
+    content="Transform your home inside and out with Aero Home™ Company — expert landscaping, renovations, drywall, painting, and handyman services in Lethbridge, Alberta. Reliable, professional, and affordable. Get your free estimate today!" />
+
+  <meta name="keywords"
+    content="landscaping Lethbridge, home renovations Lethbridge, drywall installation, painting services, handyman Lethbridge, home improvement, outdoor design, garden maintenance, renovation company Alberta, Aero Home, house remodeling, professional contractors" />
+
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Aero Home Company" />
+
+  <!-- Social / Open Graph -->
+  <meta property="og:title" content="Aero Home™ Company | Landscaping & Renovations in Lethbridge" />
+  <meta property="og:description"
+    content="Aero Home™ offers expert landscaping, painting, drywall, and renovation services throughout Lethbridge. Quality work, fair pricing, and trusted results — get your free quote today!" />
+  <meta property="og:image" content="/images/home-hero.webp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://aerohome.ca/" />
+  <meta property="og:site_name" content="Aero Home™" />
+
+  <!-- Styles & Assets -->
+  <link rel="stylesheet" href="/index-style.css" />
+  <link rel="icon" type="image/x-icon" href="/images/AeroLogo.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&display=swap" rel="stylesheet" />
 </head>
@@ -109,54 +125,50 @@
       </a>
     </div>
 
-    <h1 class="pricing-category">POPULAR <span class="highlight-keyword">PACKAGES</span></h1>
+    <h1 class="pricing-category">POPULAR <span class="highlight-keyword">SERVICES</span></h1>
 
     <div class="pricing-row-1">
       <div class="pricing-card" id="junk-removal-card">
         <h1 class="pricing-icon"><i class="fas fa-trailer"></i></h1>
         <h2 class="pricing-title">Junk Removal</h2>
-        <h3 class="pricing-subtitle">FROM</h3>
-        <h4 class="pricing-price">$100</h4>
       </div>
       <div class="pricing-card" id="mow-edge-card">
         <h1 class="pricing-icon"><i class="fa-solid fa-leaf"></i></h1>
         <h2 class="pricing-title">Basic Mow + Edge</h2>
-        <h3 class="pricing-subtitle">FROM</h3>
-        <h4 class="pricing-price">$45</h4>
       </div>
       <div class="pricing-card" id="seasonal-cleanup-card">
         <h1 class="pricing-icon"><i class="fas fa-tree"></i></h1>
         <h2 class="pricing-title">Seasonal Cleanup</h2>
-        <h3 class="pricing-subtitle">FROM</h3>
-        <h4 class="pricing-price">$120</h4>
       </div>
     </div>
-
     <div class="pricing-row-2">
       <div class="pricing-card" id="fabric-rock-card">
         <h1 class="pricing-icon"><i class="fa-solid fa-hill-rockslide"></i></h1>
         <h2 class="pricing-title">Fabric + Gravel</h2>
-        <h3 class="pricing-subtitle">FROM</h3>
-        <h4 class="pricing-price">$250</h4>
       </div>
       <div class="pricing-card" id="gate-fix-card">
         <h1 class="pricing-icon"><i class="fa-solid fa-hammer"></i></h1>
         <h2 class="pricing-title">Gate Fix</h2>
-        <h3 class="pricing-subtitle">FROM</h3>
-        <h4 class="pricing-price">$90</h4>
       </div>
       <div class="pricing-card" id="sand-paint-card">
         <h1 class="pricing-icon"><i class="fa-solid fa-paint-roller"></i></h1>
         <h2 class="pricing-title">Sand / Paint</h2>
-        <h3 class="pricing-subtitle">FROM</h3>
-        <h4 class="pricing-price">$200</h4>
       </div>
     </div>
-
-    <h2 class="pricing-note">
-      <i class="fa-solid fa-minus"></i>'From pricing' implies average dimensons and costs. Prices vary<i
-        class="fa-solid fa-minus"></i>
-    </h2>
+    <div class="pricing-row-3">
+      <div class="pricing-card" id="faucet-fix-card">
+        <h1 class="pricing-icon"><i class="fa-solid fa-faucet-drip"></i></h1>
+        <h2 class="pricing-title">Faucet Address</h2>
+      </div>
+      <div class="pricing-card" id="recovery-drywall-card">
+        <h1 class="pricing-icon"><i class="fa-solid fa-water"></i></h1>
+        <h2 class="pricing-title">Recovery Drywall</h2>
+      </div>
+      <div class="pricing-card" id="floor-install-card">
+        <h1 class="pricing-icon"><i class="fa-solid fa-wrench"></i></h1>
+        <h2 class="pricing-title">Floor Install</h2>
+      </div>
+    </div>
   </section>
 
   <!-- Mission Section -->
@@ -174,13 +186,31 @@
         results. Every project is completed with attention to detail, respect for your property and budget, and
         clear communication. We're a locally owned team built on trust, and our job is to ensure every client feels
         confident they chose the right team.
-        <br><br>
-        <i class="fas fa-lightbulb"></i> Locally Owned & Operated<br>
-        <i class="fas fa-money-bill-1-wave"></i> Free estimates and competitive pricing<br>
-        <i class="fas fa-face-smile-beam"></i> Your satisfaction is <i><u>always</u></i> guaranteed<br>
-        <i class="fas fa-folder-open"></i> Honest service and budget friendly<br>
-        <i class="fa-solid fa-handshake"></i> Professional, simple, yet reliable
       </p>
+    </div>
+
+    <!-- Feature Squares -->
+    <div class="mission-features">
+      <div class="feature-card color1">
+        <h1><i class="fas fa-lightbulb"></i></h1>
+        <h2>Locally Owned & Operated</h2>
+      </div>
+      <div class="feature-card color2">
+        <h1><i class="fas fa-money-bill-1-wave"></i></h1>
+        <h2>Free Estimates & Competitive Pricing</h2>
+      </div>
+      <div class="feature-card color4">
+        <h1><i class="fas fa-folder-open"></i></h1>
+        <h2>Honest & Budget Friendly</h2>
+      </div>
+      <div class="feature-card color5">
+        <h1><i class="fa-solid fa-handshake"></i></h1>
+        <h2>Professional & Reliable</h2>
+      </div>
+      <div class="feature-card color3">
+        <h1><i class="fas fa-face-smile-beam"></i></h1>
+        <h2>Your Satisfaction Is Guaranteed</h2>
+      </div>
     </div>
   </section>
 
@@ -210,9 +240,9 @@
 
   <!-- Contact Section -->
   <section id="contact" class="contact">
-    <form action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
-      <h3>Get A Quote Online</h3>
-      <p class="contact-subtitle">No obligations - it's free!</p>
+    <form id="contact-form" action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
+      <h3 id="contact-form-title">Get A Quote Online</h3>
+      <p id="contact-form-subtitle" class="contact-subtitle">No obligations - it's free!</p>
 
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
@@ -234,35 +264,25 @@
       <input type="hidden" name="_subject" value="New Quote Request from aerohome.ca" />
       <input type="hidden" name="_next" value="https://aerohome.ca/thank-pages/quote-thank.html" />
 
-      <button type="submit">Send Message</button>
+      <button id="contact-submit-btn" type="submit">Send Message</button>
     </form>
 
-    <h2><i class="fa-solid fa-minus"></i> CONTACT<span class="highlight-keyword"> US</span> <i
-        class="fa-solid fa-minus"></i></h2>
+    <h2 id="contact-section-title">
+      <i class="fa-solid fa-minus"></i> CONTACT
+      <span class="highlight-keyword"> US</span>
+      <i class="fa-solid fa-minus"></i>
+    </h2>
 
     <div class="contact-info-row">
-      <a class="contact-box" href="tel:4036356840">
-        <h4><i class="fas fa-phone"></i></h4>
-        <p>(403) 635 6840</p>
+      <a class="contact-box" id="contact-box" href="tel:4036356840">
+        <h4 id="contact-title"><i class="fas fa-phone"></i></h4>
+        <p id="contact-text">(403) 635 6840</p>
       </a>
 
-      <a class="contact-box" href="mailto:aerohomerenovations@gmail.com">
-        <h4><i class="fas fa-envelope"></i></h4>
-        <p>aerohomerenovations@gmail.com</p>
+      <a class="contact-box" id="contact-box" href="mailto:aerohomerenovations@gmail.com">
+        <h4 id="contact-title"><i class="fas fa-envelope"></i></h4>
+        <p id="contact-text">aerohomerenovations@gmail.com</p>
       </a>
-
-      <!-- Optional Social Links -->
-      <!-- 
-    <a class="contact-box" href="https://www.facebook.com/people/Aero-Home-Company/61577840212272/#" target="_blank">
-      <h4><i class="fab fa-facebook-f"></i></h4>
-      <p>Facebook Page</p>
-    </a>
-    
-    <a class="contact-box" href="https://google.com" target="_blank">
-      <h4><i class="fab fa-google"></i></h4>
-      <p>Google Business</p>
-    </a>
-    -->
     </div>
   </section>
 
