--- a/special-pages/pay.html
+++ b/special-pages/pay.html
@@ -4,14 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Payment Form - Aero Home™ Company</title>
-  <meta name="description"
-    content="Aero Home Company provides professional landscaping, renovations, and installations outdoors and indoors in Lethbridge. Get a free estimate today!">
-  <meta name="keywords"
-    content="landscaping, renovations, drywall, painting, Lethbridge, handyman, Calgary, garden, cleanup">
 
+  <title>Secure Payment Form - Aero Home™ Company | Lethbridge, Alberta</title>
+
+  <meta name="description"
+    content="Make a secure payment to Aero Home™ Company for your landscaping, renovation, or installation services in Lethbridge. Fast, safe, and convenient online payment portal." />
+
+  <meta name="keywords"
+    content="Aero Home payment, pay invoice Lethbridge, home renovation payment, landscaping payment, contractor invoice, Aero Home secure checkout, handyman services payment, Aero Home Company, online payment form, Aero Home billing" />
+
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="author" content="Aero Home Company" />
+
+  <!-- Social / Open Graph -->
+  <meta property="og:title" content="Secure Payment - Aero Home™ Company" />
+  <meta property="og:description"
+    content="Submit a secure online payment for your Aero Home™ services. Safe and simple checkout for Lethbridge clients." />
+  <meta property="og:image" content="/images/payment-hero.webp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://aerohome.ca/special-pages/pay.html" />
+  <meta property="og:site_name" content="Aero Home™" />
+
+  <!-- Styles & Assets -->
   <link rel="stylesheet" href="/special-pages/pay-style.css" />
-  <link rel="icon" type="image/x-icon" href="images/AeroLogo.ico" />
+  <link rel="icon" type="image/x-icon" href="/images/AeroLogo.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&display=swap" rel="stylesheet" />
 </head>
@@ -31,12 +47,14 @@
     </div>
   </div>
 
-  <!-- Form Submission Section -->
+  <!-- Payment Form Section (using existing IDs and CSS) -->
   <section id="contact" class="contact">
-    <form action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
-      <h3>PAYMENT FORM - FOR COMPLETED SERVICES</h3>
-      <p class="contact-subtitle">Please <b>fill out</b> and <b>submit</b> the form below for record-keeping purposes.
-        Thanks!</b></p>
+    <form id="contact-form" action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
+      <h3 id="contact-form-title">PAYMENT FORM - FOR COMPLETED SERVICES</h3>
+      <p id="contact-form-subtitle" class="contact-subtitle">
+        We request that our clients <b>fill out</b> and <b>submit</b> the form below for record-keeping purposes. Thank
+        you in advance!
+      </p>
 
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
@@ -67,8 +85,26 @@
       <input type="hidden" name="_subject" value="New Payment Form from aerohome.ca" />
       <input type="hidden" name="_next" value="https://aerohome.ca/thank-pages/payment-thank.html" />
 
-      <button type="submit">Submit Form</button>
+      <button id="contact-submit-btn" type="submit">Submit Form</button>
     </form>
+
+    <h2 id="contact-section-title">
+      <i class="fa-solid fa-minus"></i> CONTACT
+      <span class="highlight-keyword"> US</span>
+      <i class="fa-solid fa-minus"></i>
+    </h2>
+
+    <div class="contact-info-row">
+      <a class="contact-box" id="contact-box" href="tel:4036356840">
+        <h4 id="contact-title"><i class="fas fa-phone"></i></h4>
+        <p id="contact-text">(403) 635 6840</p>
+      </a>
+
+      <a class="contact-box" id="contact-box" href="mailto:aerohomerenovations@gmail.com">
+        <h4 id="contact-title"><i class="fas fa-envelope"></i></h4>
+        <p id="contact-text">aerohomerenovations@gmail.com</p>
+      </a>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -89,3 +125,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
+
+</html>
